--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -65,7 +65,7 @@ body {
     -khtml-box-shadow: 0px 1px 1px rgba(64, 64, 64, 0.2);
     -webkit-box-shadow: 0px 1px 1px rgba(64, 64, 64, 0.2);
     padding: 16px 0px 16px 0px;
-    position: absolute;
+    position: fixed;
     text-align: center;
     width: 100%;
     z-index: 1;
